Reorganizing and renaming

--- a/.changeset/_v5.md
+++ b/.changeset/_v5.md
@@ -1,4 +1,4 @@
-## State machines
+## XState
 
 If context types are specified in the machine config, the `context` property will now be required:
 
@@ -569,7 +569,7 @@ createMachine({
 The `actor.onTransition(...)` method has been removed in favor of `.subscribe(...)`
 
 ```diff
- const actor = interpret(machine)
+ const actor = createActor(machine)
 -  .onTransition(...)
 -  .start();
 +actor.subscribe(...);
@@ -581,7 +581,7 @@ The `actor.onTransition(...)` method has been removed in favor of `.subscribe(..
 Observing an actor via `actor.subscribe(...)` no longer immediately receives the current snapshot. Instead, the current snapshot can be read from `actor.getSnapshot()`, and observers will receive snapshots only when a transition in the actor occurs.
 
 ```ts
-const actor = interpret(machine);
+const actor = createActor(machine);
 actor.start();
 
 // Late subscription; will not receive the current snapshot
@@ -808,7 +808,7 @@ const emailMachine = createMachine({
   })
 });
 
-const emailActor = interpret(emailMachine, {
+const emailActor = createActor(emailMachine, {
   input: {
     // Strongly-typed input!
     subject: 'Hello, world!',
@@ -830,7 +830,7 @@ Storing previous state should now be done explicitly:
 ```js
 let previousState;
 
-const service = interpret(someMachine)
+const service = createActor(someMachine)
   .onTransition((state) => {
     // previousState represents the last state here
 
@@ -1367,8 +1367,6 @@ Removed `State['actions']`. Actions are considered to be a side-effect of a tran
 
 ---
 
-## Actors
-
 The `state` option of `createActor(...)` has been renamed to `snapshot`:
 
 ```diff
@@ -1454,7 +1452,7 @@ const actor2 = createActor(machine).start();
 
 ---
 
-The `interpreter.onStop(...)` method has been removed. Use an observer via `interpreter.subscribe({ complete() { ... } })` instead.
+The `actor.onStop(...)` (prev. `interpreter.onStop(...)`) method has been removed. Use an observer via `actor.subscribe({ complete() { ... } })` instead.
 
 ---
 
@@ -1510,7 +1508,7 @@ const restoredActor = createActor(machine, {
 
 ---
 
-The `execute` option for an interpreted service has been removed. If you don't want to execute actions, it's recommended that you don't hardcode implementation details into the base `machine` that will be interpreted, and extend the machine's `options.actions` instead. By default, the interpreter will execute all actions according to SCXML semantics (immediately upon transition).
+The `execute` option for an actor (prev. interpreted service) has been removed. If you don't want to execute actions, it's recommended that you don't hardcode implementation details into the base `machine` that will be interpreted, and extend the machine's `options.actions` instead. By default, the actor will execute all actions according to SCXML semantics (immediately upon transition).
 
 ---
 
@@ -1530,7 +1528,7 @@ The `service.sender(...)` method has been removed as redundant. Use `service.sen
 
 ---
 
-Removed `Interpreter['status']` from publicly available properties.
+Removed `actor.status` (prev. `interpreter.status`) from publicly available properties.
 
 ---
 
@@ -1555,7 +1553,7 @@ Reading the initial state from an actor via `actor.initialState` is removed. Use
 
 ---
 
-The `interpret(...)` function now accepts `input` in the second argument, which passes input data in the `"xstate.init"` event:
+The `createActor(...)` function now accepts `input` in the second argument, which passes input data in the `"xstate.init"` event:
 
 ```js
 const greetMachine = createMachine({
@@ -1569,7 +1567,7 @@ const greetMachine = createMachine({
   // ...
 });
 
-const actor = interpret(greetMachine, {
+const actor = createActor(greetMachine, {
   // Pass input data to the machine
   input: { name: 'David' }
 }).start();
@@ -1577,11 +1575,11 @@ const actor = interpret(greetMachine, {
 
 ---
 
-Invoked actors can now be deeply persisted and restored. When the persisted state of an actor is obtained via `actor.getPersistedState()`, the states of all invoked actors are also persisted, if possible. This state can be restored by passing the persisted state into the `state: ...` property of the `interpret` options argument:
+Invoked actors can now be deeply persisted and restored. When the persisted state of an actor is obtained via `actor.getPersistedState()`, the states of all invoked actors are also persisted, if possible. This state can be restored by passing the persisted state into the `state: ...` property of the `createActor` options argument:
 
 ```diff
 -interpret(machine).start(state);
-+interpret(machine, { state }).start();
++createActor(machine, { state }).start();
 ```
 
 ---
@@ -1618,7 +1616,7 @@ const transitionLogic = fromTransition((state, event, { self }) => { ... }, ...)
 
 ---
 
-The `interpreter.onError(...)` method has been removed. Use `interpreter.subscribe({ error(err) => { ... } })` instead.
+The `interpreter.onError(...)` method has been removed. Use `actor.subscribe({ error(err) => { ... } })` instead.
 
 ---
 
@@ -1663,7 +1661,7 @@ const machine = createMachine(
 
 ---
 
-`Interpreter['off']` method has been removed.
+The `actor.off(...)` (prev. `interpreter.off(...)`) method has been removed.
 
 ---
 
@@ -1703,7 +1701,7 @@ const actor = createActor(machine, {
 
 ---
 
-`.nextState` method has been removed from the `Interpreter`. `State#can` can be used to check if sending a particular event would lead to a state change.
+The `actor.nextState(...)` method has been removed from the `Actor` (prev. `Interpreter`). `state.can(...)` can be used to check if sending a particular event would lead to a state change.
 
 ---
 
